Fixed some typos

--- a/Session1.1/index.html
+++ b/Session1.1/index.html
@@ -543,7 +543,7 @@ or equivalently
 
 1\. can be easily estimated as
 
-`$$\class{red}{p(\boldsymbol\psi\mid\boldsymbol{y})} \class{black}{= \frac{p(\boldsymbol\theta,\boldsymbol\psi\mid\boldsymbol{y})}{p(\boldsymbol\theta\mid\boldsymbol\psi,\boldsymbol{y})}} \text{ (Recall slide 14)}$$`
+`$$\class{red}{p(\boldsymbol\psi\mid\boldsymbol{y})} \class{black}{= \frac{p(\boldsymbol\theta,\boldsymbol\psi\mid\boldsymbol{y})}{p(\boldsymbol\theta\mid\boldsymbol\psi,\boldsymbol{y})}} \text{ (Recall slide 13)}$$`
 
 ---
 
@@ -1058,20 +1058,20 @@ The .olive[`control.xxx=list(...)`] statements  in the .olive[`inla`] function c
  [5] "marginals.lincomb"           "size.lincomb"               
  [7] "summary.lincomb.derived"     "marginals.lincomb.derived"  
  [9] "size.lincomb.derived"        "mlik"                       
-[11] "cpo"                         "po"                         
-[13] "waic"                        "model.random"               
-[15] "summary.random"              "marginals.random"           
-[17] "size.random"                 "summary.linear.predictor"   
-[19] "marginals.linear.predictor"  "summary.fitted.values"      
-[21] "marginals.fitted.values"     "size.linear.predictor"      
-[23] "summary.hyperpar"            "marginals.hyperpar"         
-[25] "internal.summary.hyperpar"   "internal.marginals.hyperpar"
-[27] "offset.linear.predictor"     "model.spde2.blc"            
-[29] "summary.spde2.blc"           "marginals.spde2.blc"        
-[31] "size.spde2.blc"              "model.spde3.blc"            
-[33] "summary.spde3.blc"           "marginals.spde3.blc"        
-[35] "size.spde3.blc"              "logfile"                    
-[37] "misc"                        "dic"                        
+[11] "cpo"                         "gcpo"                       
+[13] "po"                          "waic"                       
+[15] "model.random"                "summary.random"             
+[17] "marginals.random"            "size.random"                
+[19] "summary.linear.predictor"    "marginals.linear.predictor" 
+[21] "summary.fitted.values"       "marginals.fitted.values"    
+[23] "size.linear.predictor"       "summary.hyperpar"           
+[25] "marginals.hyperpar"          "internal.summary.hyperpar"  
+[27] "internal.marginals.hyperpar" "offset.linear.predictor"    
+[29] "model.spde2.blc"             "summary.spde2.blc"          
+[31] "marginals.spde2.blc"         "size.spde2.blc"             
+[33] "model.spde3.blc"             "summary.spde3.blc"          
+[35] "marginals.spde3.blc"         "size.spde3.blc"             
+[37] "logfile"                     "misc"                       
 ```
 ]
 ---
@@ -1111,42 +1111,17 @@ We specify a simple regression model with `Petal.length` and `Petal.width` as de
 
 ---
 
-# Toy example: run INLA + summary
+# Toy example: run INLA + exploring the fixed effects output
 &lt;span style="display:block; margin-top: -15px ;"&gt;&lt;/span&gt;
-.small[
+
 
 ```r
 &gt; formula &lt;- Petal.Length ~  1 + Petal.Width
 &gt; output &lt;- inla(formula, family="gaussian", data=iris)
-&gt; summary(output)
 ```
 
-```
 
-Call:
-   "inla(formula = formula, family = \"gaussian\", data = iris)" 
-Time used:
-    Pre = 0.285, Running = 0.0765, Post = 0.0279, Total = 0.39 
-Fixed effects:
-             mean    sd 0.025quant 0.5quant 0.975quant  mode kld
-(Intercept) 1.084 0.073      0.940    1.084      1.227 1.084   0
-Petal.Width 2.230 0.051      2.129    2.230      2.331 2.230   0
 
-Model hyperparameters:
-                                        mean    sd 0.025quant 0.5quant
-Precision for the Gaussian observations 4.43 0.511       3.49     4.41
-                                        0.975quant mode
-Precision for the Gaussian observations       5.49 4.37
-
-Expected number of effective parameters(stdev): 2.00(0.00)
-Number of equivalent replicates : 74.85 
-
-Marginal log-Likelihood:  -119.59 
-```
-]
----
-
-# Exploring the output: fixed effects
 
 
 ```r
@@ -1155,11 +1130,11 @@ Marginal log-Likelihood:  -119.59
 
 ```
                 mean         sd 0.025quant 0.5quant 0.975quant     mode
-(Intercept) 1.083565 0.07293226  0.9401746 1.083563   1.226833 1.083565
-Petal.Width 2.229935 0.05137177  2.1289336 2.229933   2.330849 2.229935
+(Intercept) 1.083565 0.07292053  0.9403638 1.083565   1.226767 1.083565
+Petal.Width 2.229935 0.05136350  2.1290668 2.229935   2.330802 2.229935
                      kld
-(Intercept) 1.284615e-06
-Petal.Width 1.284522e-06
+(Intercept) 9.793205e-10
+Petal.Width 9.795416e-10
 ```
 
 - For each unstructured *fixed* effect, `R-INLA` reports a set of summary statistics from the posterior distribution.
@@ -1182,9 +1157,9 @@ Petal.Width 1.284522e-06
 
 ```
                                             mean        sd 0.025quant 0.5quant
-Precision for the Gaussian observations 4.432532 0.5109594    3.48813 4.412588
+Precision for the Gaussian observations 4.432669 0.5115426   3.501964  4.41341
                                         0.975quant     mode
-Precision for the Gaussian observations    5.48995 4.372888
+Precision for the Gaussian observations   5.484825 4.373221
 ```
 
 - For each hyperparameter the summary statistics are reported to describe the posterior distribution.
@@ -1271,7 +1246,7 @@ Precision for the Gaussian observations    5.48995 4.372888
 ```
 
 ```
-[1] 1.978538
+[1] 1.990405
 ```
 
 ```r
@@ -1279,7 +1254,7 @@ Precision for the Gaussian observations    5.48995 4.372888
 ```
 
 ```
-[1] 2.205708 2.240873 2.252066 2.225845
+[1] 2.269821 2.305336 2.292591 2.310018
 ```
 
 ]
@@ -1337,7 +1312,7 @@ Precision for the Gaussian observations    5.48995 4.372888
 ```
 
 ```
-[1] 0.2286685
+[1] 0.2285229
 ```
 
 
@@ -1394,6 +1369,9 @@ approximations (with discussion)". In: _J. R. Statist. Soc. B_ 71, pp.
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script src="https://platform.twitter.com/widgets.js"></script>
 <script>var slideshow = remark.create({
+"navigation": {
+"scroll": false
+},
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false,
